header and footer added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+body {
+    overflow-x: initial !important;
+    display: inline-block;
+    min-width: 100% !important;
+    height: 100% !important;
+}
+.Router {
+    background-color: rgba(229, 255, 0, 0.404);
+    padding: 1.5rem 2rem 35px 2rem;
+    min-height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.footer--pin {
+    position: relative;
+    left: 0;
+    bottom: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-container {
+    min-height: calc(100vh - 20px) !important;
 }
