added modal functionality

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,6 +49,6 @@ Nav {
 .team-container {
     background-color: #4f5902;
 }
-#testing:hover {
+#team-card:hover {
     background-color:#cdd9a0;
 }
