--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,26 @@ body {
     height: 100px;
     width: 180px;
 }
+#prof-icon-cont {
+    display: flex;
+    justify-content: center; 
+    background-color: #D9CBA0;
+}
+.profile-icon {
+    color:#2e260c;
+    padding: 50px;
+    float: left;
+    text-align: center;
+}
+#profile-cont {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+#profile-user {
+    float: left;
+}
+
 .Router {
     background-color: rgba(229, 255, 0, 0.404);
     padding: 1.5rem 2rem 35px 2rem;
