--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,18 @@ body {
     justify-content: center; 
     background-color: #D9CBA0;
 }
+.pro-location {
+    text-decoration: underline;
+}
+#profile-cont-2 {
+    padding: 25px;
+    float: left;
+}
+
+#pro-bio-input {
+    resize: horizontal !important;
+}
+
 .profile-icon {
     color:#2e260c;
     padding: 50px;
