--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,7 +76,6 @@ Nav {
 }
 .homeimg {
    min-width: 100vw;
-    opacity: 0.7;
 }
 .team-container {
     background-color: #4f5902;
@@ -85,3 +84,6 @@ Nav {
     background-color:#cdd9a0;
 }
 
+.about-img {
+    min-width: 100vw;
+ }
