--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,11 +93,11 @@ Nav {
     margin-right: 20px;
     margin-top: 20px;
      display: flex;
-    
  }
 
  .about-child {
      margin-left: 10%;
     margin-right: 10%; 
     text-align: center; 
+    font-size: 18px;
  }
