Styled MyGarden Page, added addwater and delete plant functionality, defined mutation in server schmea

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,4 +84,9 @@ Nav {
 #team-card:hover {
     background-color:#cdd9a0;
 }
+.garden-container {
+    background-color: #4f5902;
+    padding-top: 5px;
+}
+
 
