--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,9 @@ body {
 #profileStatus {
     float: left;
 }
+#PlantFormCont {
+    padding: 100px;
+}
 .Router {
     background-color: rgba(229, 255, 0, 0.404);
     padding: 1.5rem 2rem 35px 2rem;
