--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,13 @@ body {
     margin: auto;
     padding-top: 6vh;
 }
+#ContactPar {
+    font-size: 2.84em;
+    font-family: 'Oswald', sans-serif;
+}
+#ContactContainer {
+    padding: 10vh;
+}
 .Router {
     background-color: rgba(229, 255, 0, 0.404);
     padding: 1.5rem 2rem 35px 2rem;
