--- a/client/src/App.css
+++ b/client/src/App.css
@@ -41,6 +41,7 @@ body {
 }
 .content-container {
     min-height: calc(100vh - 20px) !important;
+    
 }
 .header {
     color: #647f4d !important;
@@ -57,12 +58,15 @@ Nav {
 .team-container {
     background-color: #4f5902;
 }
+#plant-card {
+    background-color: #EBDBAE
+}
+
 #team-card:hover {
     background-color:#cdd9a0;
 }
 .garden-container {
     background-color: #4f5902;
-    padding-top: 5px;
 }
 
 
@@ -83,3 +87,13 @@ Nav {
     text-align: center; 
     font-size: 18px;
  } 
+
+ .plantTable {
+     background-color: #EBDBAE;
+ }
+
+ .removegardenbtn{
+     background-color: #4f5902;
+ }
+
+ 
