--- a/client/src/App.css
+++ b/client/src/App.css
@@ -108,4 +108,7 @@ Nav {
      background-color: #4f5902;
  }
 
+.content-container {
+    background-image: url(./pages/assets/best-aesthetic-plants.jpeg);
+}
  
