fixed background image vh in contact page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -110,5 +110,6 @@ Nav {
 
 .contact-container{
     background-image: url(./pages/assets/best-aesthetic-plants.jpeg);
+    padding-bottom: 50vh;
 }
  
