fixed merge conflicts

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -112,6 +112,10 @@ Nav {
     background-image: url(./pages/assets/best-aesthetic-plants.jpeg);
     padding-bottom: 50vh;
 }
+.addplantbtn{
+    background-color: #EBDBAE;
+}
+
 
  
 
