Stopped Garden Page from breaking, cleaned up code

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -117,7 +117,7 @@ Nav {
     padding-bottom: 50vh;
 }
 
- .content-container {    
+ /* .content-container {    
      background-image: url(./pages/assets/best-aesthetic-plants.jpeg);
- }
+ } */
 
