Updated styling for add Plant header, Changed the Form to allow Dropdown values and updated the handleChange function in the form to update state from non-input events

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,8 @@ body {
 #addPlantHead {
     font-size: 2em;
     padding-top: 10px;
+    text-align: center;
+    position: relative
 }
 #ContactPar {
   font-size: 2.84em;
