Updated Dashboard layout to allow for a scrollable plant feed on both mobile and desktop, and be responsive and adaptive. Added card state and useEffect hook to determine water hydration status. Need to add code to enable table to disable addWater button of a hydrated plant, and a put route to reset plant water at the start of the month

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,6 +59,13 @@ body {
 }
 .content-container {
   min-height: calc(100vh - 20px) !important;
+  margin-Bottom: -70;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.contact-container > * {
+  height: 100%;
 }
 .header {
   color: #647f4d !important;
@@ -83,9 +90,7 @@ Nav {
 #team-card:hover {
   background-color: #cdd9a0;
 }
-.garden-container {
-  background-color: #4f5902;
-}
+
 
 .about-img {
   min-width: 100vw;
@@ -120,5 +125,4 @@ Nav {
 .addplantbtn{
     background-color: #EBDBAE;
 }
-
 
